fixing layout issues

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
 
     margin: 0 auto;
     width: 900px;
-    border: 1px solid black;
     text-align: center;
 
 }
@@ -57,9 +56,10 @@ body {
 #signPane h5 {
 
     background-color: #ccc;
-    font-family: Arial;
-    font-size: 36;
+    font-family: Verdana;
+    font-size: 72;
     border-bottom: solid 1px #000;
+    padding: 10px;
     margin: 0;
 
 }
